# apps/go/internal/model/cart.go
@@ -1,13 +1,15 @@
 package model
 
 type CartItem struct {
-	IDVariant   string `json:"id_variant" binding:"required"`
-	Path        string `json:"path" binding:"required"`
-	Name        string `json:"name" binding:"required"`
-	VariantName string `json:"variant_name" binding:"required"`
-	Img         string `json:"img" binding:"required"`
-	PriceIdr    int64  `json:"price_idr" binding:"required"`
-	Quantity    int    `json:"quantity" binding:"required"`
+	IDVariant        string `json:"id_variant" binding:"required"`
+	Path             string `json:"path" binding:"required"`
+	Name             string `json:"name" binding:"required"`
+	NameVariant      string `json:"name_variant" binding:"required"`
+	ImgURL           string `json:"img_url" binding:"required"`
+	ImgAlt           string `json:"img_alt" binding:"required"`
+	PriceIdr         int64  `json:"price_idr" binding:"required"`
+	OriginalPriceIdr int64  `json:"original_price_idr" binding:"required"`
+	Quantity         int    `json:"quantity" binding:"required"`
 } // @name CartItem
 
 type CartRequest struct {
