# apps/js/src/model/cart.ts
@@ -1,13 +1,21 @@
 export type CartItem = {
-	id_product: number;
-	slug: string;
+	id_variant: string;
+	path: string;
 	name: string;
-	img: string;
+	name_variant: string;
+	img_url: string;
+	img_alt: string;
 	price_idr: number;
+	original_price_idr: number;
 	quantity: number;
 };
 
-export type CartRequest = {
+export type CartItemRow = Omit<CartItem, "id_variant" | "path"> & {
+	id_variant: number;
 	id_product: number;
+};
+
+export type CartRequest = {
+	id_variant: string;
 	quantity: number;
 };
